--- a/student.html
+++ b/student.html
@@ -208,6 +208,7 @@
             </div>
 
             <div id="tab-classes" class="tab-content hidden animate-fade-in">
+                <div class="mb-6 flex flex-col md:flex-row md:items-end justify-between gap-4">
                     <div>
                         <h2 class="text-3xl font-black text-gray-800 mb-1">Lớp học của tôi</h2>
                         <p class="text-gray-500 text-sm">Danh sách các lớp bạn đang tham gia</p>
