--- a/dashboard-mapid.html
+++ b/dashboard-mapid.html
@@ -38,7 +38,7 @@
 
     <header class="h-14 bg-white border-b border-gray-200 flex items-center justify-between px-4 shadow-sm z-20 shrink-0">
         <div class="flex items-center gap-3">
-            <a href="dashboard.html" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-200 transition-colors"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="dashboard.html" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center text-gray-50 hover:bg-gray-200 transition-colors"><i class="fa-solid fa-arrow-left"></i></a>
             <h1 class="font-bold text-lg text-gray-800 flex items-center gap-2"><i class="fa-solid fa-folder-tree text-blue-600"></i> Quản lý MapID</h1>
         </div>
         <div class="flex items-center gap-2">
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div class="w-1/3 md:w-1/4 flex flex-col bg-gray-50">
+        <div class="w-1/3 md:w-1/4 flex flex-col bg-gray-50 overflow-y-auto custom-scroll">
             
             <div class="p-4 border-b border-gray-200 bg-white">
                 <h3 class="text-xs font-bold text-gray-400 uppercase mb-3">Thông tin mã hóa</h3>
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="p-4 flex-1 overflow-y-auto">
+            <div class="p-4">
                 <h3 class="text-xs font-bold text-gray-400 uppercase mb-3">Thống kê nhánh</h3>
                 <div id="statPanel" class="space-y-2 text-sm text-gray-600 hidden">
                     <div class="bg-white p-3 rounded border flex justify-between">
@@ -102,6 +102,27 @@
                         <span>Tổng số mục con:</span>
                         <b id="statTotalChild">0</b>
                     </div>
+                    
+                    <div class="mt-6 pt-4 border-t border-gray-200">
+                        <h4 class="text-xs font-bold text-gray-400 uppercase mb-3"><i class="fa-solid fa-tags mr-1"></i> Phân loại thuộc tính</h4>
+                        <div class="flex flex-col gap-3">
+                            <label class="flex items-center gap-3 p-3 bg-white border border-gray-200 rounded-xl cursor-pointer hover:bg-blue-50 transition-colors">
+                                <input type="checkbox" id="chkTheory" class="w-5 h-5 text-blue-600 rounded border-gray-300 focus:ring-blue-500 transition-all">
+                                <div>
+                                    <div class="font-bold text-sm text-gray-700">Dạng Lý thuyết</div>
+                                    <div class="text-[10px] text-gray-500">Toàn bộ câu hỏi trong nhánh này là lý thuyết.</div>
+                                </div>
+                            </label>
+                            <label class="flex items-center gap-3 p-3 bg-white border border-gray-200 rounded-xl cursor-pointer hover:bg-green-50 transition-colors">
+                                <input type="checkbox" id="chkRealWorld" class="w-5 h-5 text-green-600 rounded border-gray-300 focus:ring-green-500 transition-all">
+                                <div>
+                                    <div class="font-bold text-sm text-gray-700">Toán Thực tế</div>
+                                    <div class="text-[10px] text-gray-500">Toàn bộ câu hỏi trong nhánh này là toán thực tế.</div>
+                                </div>
+                            </label>
+                        </div>
+                    </div>
+
                     <button id="btnDeleteNode" class="w-full mt-4 py-2 bg-red-100 text-red-600 font-bold rounded hover:bg-red-200 transition-colors">
                         <i class="fa-solid fa-trash mr-1"></i> Xóa nhánh này
                     </button>
